@@ -6,7 +6,7 @@
 
     <groupId>de.holisticon</groupId>
     <artifactId>kotlin-example-coroutines</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.12</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,7 +17,7 @@
         <maven.compiler.target>11</maven.compiler.target>
 
         <kotlin-logging.version>1.6.26</kotlin-logging.version>
-        <kotlin.version>1.3.31</kotlin.version>
+        <kotlin.version>1.3.40</kotlin.version>
         <vertx.version>3.7.1</vertx.version>
         <slf4j-simple.version>1.7.26</slf4j-simple.version>
         <hsqldb.version>2.5.0</hsqldb.version>
@@ -28,13 +28,15 @@
         <moshi-kotlin.version>1.8.0</moshi-kotlin.version>
         <c3p0.version>0.9.5.4</c3p0.version>
 
-        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
         <codacy-maven-plugin.version>1.2.0</codacy-maven-plugin.version>
-        <openapi-generator-maven-plugin.version>4.0.0</openapi-generator-maven-plugin.version>
+        <openapi-generator-maven-plugin.version>4.0.2</openapi-generator-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <gitflow-maven-plugin.version>1.12.0</gitflow-maven-plugin.version>
+        <dockerfile-maven.version>1.4.10</dockerfile-maven.version>
+        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -169,6 +171,7 @@
             <artifactId>ehcache</artifactId>
             <version>${ehcache.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.squareup.moshi</groupId>
             <artifactId>moshi-kotlin</artifactId>
@@ -202,6 +205,42 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>default</id>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <repository>weinschenker/kotlin-example-coroutines</repository>
+                            <tag>${project.version}</tag>
+                            <buildArgs>
+                                <!--<JAR_FILE>application.jar</JAR_FILE>-->
+                                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                                <APODRATING_PORT_ARG>${env.APODRATING_PORT}</APODRATING_PORT_ARG>
+                                <APODRATING_H2_PORT_ARG>${env.APODRATING_H2_PORT}</APODRATING_H2_PORT_ARG>
+                                <JDBC_URL_ARG>${env.JDBC_URL}</JDBC_URL_ARG>
+                                <JDBC_DRIVER_ARG>${env.JDBC_DRIVER}</JDBC_DRIVER_ARG>
+                                <JDBC_MAX_POOL_SIZE_ARG>${env.JDBC_MAX_POOL_SIZE}</JDBC_MAX_POOL_SIZE_ARG>
+                                <NASA_API_KEY_ARG>${env.NASA_API_KEY}</NASA_API_KEY_ARG>
+                                <NASA_API_HOST_ARG>${env.NASA_API_HOST}</NASA_API_HOST_ARG>
+                                <NASA_API_PATH_ARG>${env.NASA_API_PATH}</NASA_API_PATH_ARG>
+                            </buildArgs>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -288,12 +327,29 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <proc>none</proc>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.se</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.lang</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.nio=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.management/sun.management=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
                 <executions>
                     <execution>
@@ -318,36 +374,6 @@
                         <goals>
                             <goal>testCompile</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>application</finalName>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <minimizeJar>false</minimizeJar>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <manifestEntries>
-                                        <Main-Class>apodrating.MainKt</Main-Class>
-                                        <Main-Verticle>apodrating.AppKt</Main-Verticle>
-                                    </manifestEntries>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
-                                </transformer>
-                            </transformers>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -399,6 +425,38 @@
                             <generateApis>false</generateApis>
                             <generateSupportingFiles>false</generateSupportingFiles>
                             <configHelp>false</configHelp>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <finalName>application</finalName>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>apodrating.MainKt</mainClass>
+                            <classpathPrefix>dependency-jars/</classpathPrefix>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.directory}/dependency-jars/
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -515,13 +573,18 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-shade-plugin</artifactId>
-                    <version>${maven-shade-plugin.version}</version>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven-dependency-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
@@ -540,6 +603,11 @@
                     <configuration>
                         <coverageReportFile>target/site/jacoco/jacoco.xml</coverageReportFile>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>${dockerfile-maven.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
